src/test/deca/syntax/invalid/ident_var.deca
//Description
//    Vérifier les noms d'ident uniques
//
//Résultats :
//    Erreur Lexicale:
//    Ligne 9

{
int if = 3;
}
